// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process markdown content correctly Correctly creates a new MarkdownRemark node 1`] = `
Array [
  Array [
    Object {
      "children": Array [],
      "frontmatter": Object {
        "date": "12/12/2014",
        "parent": "whatever",
        "title": "my little pony",
      },
      "id": "whatever >>> MarkdownRemark",
      "internal": Object {
        "content": "---
title: \\"my little pony\\"
date: \\"12/12/2014\\"
---

Where oh where is my little pony?
    ",
        "contentDigest": "54cfa2ad99756f2fa232cac585280a37",
        "type": "MarkdownRemark",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process markdown content correctly Correctly creates a new MarkdownRemark node 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "children": Array [],
        "frontmatter": Object {
          "date": "12/12/2014",
          "parent": "whatever",
          "title": "my little pony",
        },
        "id": "whatever >>> MarkdownRemark",
        "internal": Object {
          "content": "---
title: \\"my little pony\\"
date: \\"12/12/2014\\"
---

Where oh where is my little pony?
    ",
          "contentDigest": "54cfa2ad99756f2fa232cac585280a37",
          "type": "MarkdownRemark",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "---
title: \\"my little pony\\"
date: \\"12/12/2014\\"
---

Where oh where is my little pony?
    ",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/x-markdown",
        },
      },
    },
  ],
]
`;
